Fix language menu style and z-index on IE7

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -152,6 +152,7 @@ li{
 	max-width:1050px;
 	margin:auto;
 	position:relative;
+	z-index:100;
 }
 #head.home {
 	text-align:center;
@@ -175,33 +176,32 @@ li{
 	margin:0px;
 	text-align:right;
 	cursor:pointer;
-	z-index:1000;
 }
 #lang{
 	position:absolute;
 	right:5px;
 	top:0px;
 	height:30px;
-	border-left:1px solid transparent;
-	border-right:1px solid transparent;
-	border-top:1px solid transparent;
+	border-left:2px solid transparent;
+	border-right:2px solid transparent;
+	border-top:2px solid transparent;
 }
 #lang>li>ul{
 	display:none;
-	right:-1px;
+	right:-2px;
 	top:28px;
 	position:absolute;
 	background-color:#fff;
 	margin-left:-5px;
 	padding-bottom:4px;
-	border-left:1px solid #ebebeb;
-	border-right:1px solid #ebebeb;
-	border-bottom:1px solid #ebebeb;
+	border-left:2px solid #ebebeb;
+	border-right:2px solid #ebebeb;
+	border-bottom:2px solid #ebebeb;
 }
 #lang:hover{
-	border-left:1px solid #ebebeb;
-	border-right:1px solid #ebebeb;
-	border-top:1px solid #ebebeb;
+	border-left:2px solid #ebebeb;
+	border-right:2px solid #ebebeb;
+	border-top:2px solid #ebebeb;
 	background-color:#fff;
 }
 #lang:hover>li>ul{
